refactor users controller and routes
